# yalb

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
executables/: meson.build
executables/milestone02/: main.cpp  meson.build  plot.py
executables/milestone03/: main.cpp  meson.build  plot.py
executables/milestone04/: main.cpp  measure_viscosity_vs_omega.py  meson.build  plot.py
executables/milestone05/: main.cpp  meson.build  plot.py
executables/milestone06/: animate_flow.py  compare_fields.py  detect_kokkos_backend.py  main.cpp  measure_scaling.py  measure_weak_scaling.py  meson.build  parse_strong_scaling.py  parse_weak_scaling.py  plot.py  plot_presentation_scaling.py  plot_strong_scaling.py  plot_weak_scaling.py
executables/milestone06/cmake/: CMakeLists.txt
executables/milestone06/slurm/: cpu_strong_scaling_mpi.slurm  gpu_sanity_dev_a100_il.slurm  gpu_strong_scaling_a100_short.slurm  gpu_strong_scaling_cmake_a100.slurm  gpu_strong_scaling_kokkos_cuda.slurm  gpu_weak_scaling_cmake_a100.slurm
src/: lbm_d2q9.cpp  lbm_d2q9.h  lbm_d2q9_mpi.cpp  lbm_d2q9_mpi.h  meson.build
tests/: gtest_main.cpp  gtest_mpi_main.cpp  meson.build  test_lbm_cavity.cpp  test_lbm_collision.cpp  test_lbm_d2q9.cpp  test_lbm_mpi_cavity.cpp  test_lbm_shear_wave.cpp
